--- a/css/estilos.css
+++ b/css/estilos.css
@@ -26,3 +26,10 @@ body {
     font-size: 1.8rem;
     font-weight: bold;
   }
+
+  #contacto {
+    background-color: #f8f9fa;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  }
